kite/js/parser/svgPath.js
/*
 * NOTE: Generated from svgPath.pegjs using PEG.js, with added kite namespace and require.js compatibility.
 * See svgPath.pegjs for more documentation, or run 'grunt generate-svgPath-parser' to regenerate.
 */

import kite from '../kite.js';

/*
 * Generated by PEG.js 0.7.0.
 *
 * http://pegjs.majda.cz/
 */

function quote( s ) {
  /*
   * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
   * string literal except for the closing quote character, backslash,
   * carriage return, line separator, paragraph separator, and line feed.
   * Any character may appear in the form of an escape sequence.
   *
   * For portability, we also escape escape all control and non-ASCII
   * characters. Note that "\0" and "\v" escape sequences are not used
   * because JSHint does not like the first and IE the second.
   */
  return '"' + s
               .replace( /\\/g, '\\\\' )  // backslash
               .replace( /"/g, '\\"' )    // closing quote character
               .replace( /\x08/g, '\\b' ) // backspace
               .replace( /\t/g, '\\t' )   // horizontal tab
               .replace( /\n/g, '\\n' )   // line feed
               .replace( /\f/g, '\\f' )   // form feed
               .replace( /\r/g, '\\r' )   // carriage return
               .replace( /[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape )
         + '"';
}

var result = {
  /*
   * Parses the input with a generated parser. If the parsing is successfull,
   * returns a value explicitly or implicitly specified by the grammar from
   * which the parser was generated (see |PEG.buildParser|). If the parsing is
   * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
   */
  parse: function( input, startRule ) {
    var parseFunctions = {
      "svgPath": parse_svgPath,
      "movetoDrawtoCommandGroups": parse_movetoDrawtoCommandGroups,
      "movetoDrawtoCommandGroup": parse_movetoDrawtoCommandGroup,
      "drawtoCommands": parse_drawtoCommands,
      "drawtoCommand": parse_drawtoCommand,
      "moveto": parse_moveto,
      "movetoArgumentSequence": parse_movetoArgumentSequence,
      "closepath": parse_closepath,
      "lineto": parse_lineto,
      "linetoArgumentSequence": parse_linetoArgumentSequence,
      "horizontalLineto": parse_horizontalLineto,
      "horizontalLinetoArgumentSequence": parse_horizontalLinetoArgumentSequence,
      "verticalLineto": parse_verticalLineto,
      "verticalLinetoArgumentSequence": parse_verticalLinetoArgumentSequence,
      "curveto": parse_curveto,
      "curvetoArgumentSequence": parse_curvetoArgumentSequence,
      "curvetoArgument": parse_curvetoArgument,
      "smoothCurveto": parse_smoothCurveto,
      "smoothCurvetoArgumentSequence": parse_smoothCurvetoArgumentSequence,
      "smoothCurvetoArgument": parse_smoothCurvetoArgument,
      "quadraticBezierCurveto": parse_quadraticBezierCurveto,
      "quadraticBezierCurvetoArgumentSequence": parse_quadraticBezierCurvetoArgumentSequence,
      "quadraticBezierCurvetoArgument": parse_quadraticBezierCurvetoArgument,
      "smoothQuadraticBezierCurveto": parse_smoothQuadraticBezierCurveto,
      "smoothQuadraticBezierCurvetoArgumentSequence": parse_smoothQuadraticBezierCurvetoArgumentSequence,
      "ellipticalArc": parse_ellipticalArc,
      "ellipticalArcArgumentSequence": parse_ellipticalArcArgumentSequence,
      "ellipticalArcArgument": parse_ellipticalArcArgument,
      "coordinatePair": parse_coordinatePair,
      "nonnegativeNumber": parse_nonnegativeNumber,
      "number": parse_number,
      "flag": parse_flag,
      "commaWsp": parse_commaWsp,
      "comma": parse_comma,
      "floatingPointConstant": parse_floatingPointConstant,
      "fractionalConstant": parse_fractionalConstant,
      "exponent": parse_exponent,
      "sign": parse_sign,
      "digitSequence": parse_digitSequence,
      "digit": parse_digit,
      "wsp": parse_wsp
    };

    if ( startRule !== undefined ) {
      if ( parseFunctions[ startRule ] === undefined ) {
        throw new Error( "Invalid rule name: " + quote( startRule ) + "." );
      }
    }
    else {
      startRule = "svgPath";
    }

    var pos = 0;
    var reportFailures = 0;
    var rightmostFailuresPos = 0;
    var rightmostFailuresExpected = [];

    function padLeft( input, padding, length ) {
      var result = input;

      var padLength = length - input.length;
      for ( var i = 0; i < padLength; i++ ) {
        result = padding + result;
      }

      return result;
    }

    function escape( ch ) {
      var charCode = ch.charCodeAt( 0 );
      var escapeChar;
      var length;

      if ( charCode <= 0xFF ) {
        escapeChar = 'x';
        length = 2;
      }
      else {
        escapeChar = 'u';
        length = 4;
      }

      return '\\' + escapeChar + padLeft( charCode.toString( 16 ).toUpperCase(), '0', length );
    }

    function matchFailed( failure ) {
      if ( pos < rightmostFailuresPos ) {
        return;
      }

      if ( pos > rightmostFailuresPos ) {
        rightmostFailuresPos = pos;
        rightmostFailuresExpected = [];
      }

      rightmostFailuresExpected.push( failure );
    }

    function parse_svgPath() {
      var result0, result1, result2, result3;
      var pos0, pos1;

      pos0 = pos;
      pos1 = pos;
      result0 = [];
      result1 = parse_wsp();
      while ( result1 !== null ) {
        result0.push( result1 );
        result1 = parse_wsp();
      }
      if ( result0 !== null ) {
        result1 = parse_movetoDrawtoCommandGroups();
        result1 = result1 !== null ? result1 : "";
        if ( result1 !== null ) {
          result2 = [];
          result3 = parse_wsp();
          while ( result3 !== null ) {
            result2.push( result3 );
            result3 = parse_wsp();
          }
          if ( result2 !== null ) {
            result0 = [ result0, result1, result2 ];
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
      }
      else {
        result0 = null;
        pos = pos1;
      }
      if ( result0 !== null ) {
        result0 = ( function( offset, path ) { return path ? path : []; } )( pos0, result0[ 1 ] );
      }
      if ( result0 === null ) {
        pos = pos0;
      }
      return result0;
    }

    function parse_movetoDrawtoCommandGroups() {
      var result0, result1, result2;
      var pos0, pos1;

      pos0 = pos;
      pos1 = pos;
      result0 = parse_movetoDrawtoCommandGroup();
      if ( result0 !== null ) {
        result1 = [];
        result2 = parse_wsp();
        while ( result2 !== null ) {
          result1.push( result2 );
          result2 = parse_wsp();
        }
        if ( result1 !== null ) {
          result2 = parse_movetoDrawtoCommandGroups();
          if ( result2 !== null ) {
            result0 = [ result0, result1, result2 ];
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
      }
      else {
        result0 = null;
        pos = pos1;
      }
      if ( result0 !== null ) {
        result0 = ( function( offset, a, b ) { return a.concat( b ); } )( pos0, result0[ 0 ], result0[ 2 ] );
      }
      if ( result0 === null ) {
        pos = pos0;
      }
      if ( result0 === null ) {
        pos0 = pos;
        result0 = parse_movetoDrawtoCommandGroup();
        if ( result0 !== null ) {
          result0 = ( function( offset, a ) { return a; } )( pos0, result0 );
        }
        if ( result0 === null ) {
          pos = pos0;
        }
      }
      return result0;
    }

    function parse_movetoDrawtoCommandGroup() {
      var result0, result1, result2;
      var pos0, pos1;

      pos0 = pos;
      pos1 = pos;
      result0 = parse_moveto();
      if ( result0 !== null ) {
        result1 = [];
        result2 = parse_wsp();
        while ( result2 !== null ) {
          result1.push( result2 );
          result2 = parse_wsp();
        }
        if ( result1 !== null ) {
          result2 = parse_drawtoCommands();
          result2 = result2 !== null ? result2 : "";
          if ( result2 !== null ) {
            result0 = [ result0, result1, result2 ];
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
      }
      else {
        result0 = null;
        pos = pos1;
      }
      if ( result0 !== null ) {
        result0 = ( function( offset, m, c ) { return c.length ? m.concat( c ) : m; } )( pos0, result0[ 0 ], result0[ 2 ] );
      }
      if ( result0 === null ) {
        pos = pos0;
      }
      return result0;
    }

    function parse_drawtoCommands() {
      var result0, result1, result2;
      var pos0, pos1;

      pos0 = pos;
      pos1 = pos;
      result0 = parse_drawtoCommand();
      if ( result0 !== null ) {
        result1 = [];
        result2 = parse_wsp();
        while ( result2 !== null ) {
          result1.push( result2 );
          result2 = parse_wsp();
        }
        if ( result1 !== null ) {
          result2 = parse_drawtoCommands();
          if ( result2 !== null ) {
            result0 = [ result0, result1, result2 ];
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
      }
      else {
        result0 = null;
        pos = pos1;
      }
      if ( result0 !== null ) {
        result0 = ( function( offset, cmd, cmds ) { return cmd.concat( cmds ); } )( pos0, result0[ 0 ], result0[ 2 ] );
      }
      if ( result0 === null ) {
        pos = pos0;
      }
      if ( result0 === null ) {
        pos0 = pos;
        result0 = parse_drawtoCommand();
        if ( result0 !== null ) {
          result0 = ( function( offset, cmd ) { return cmd; } )( pos0, result0 );
        }
        if ( result0 === null ) {
          pos = pos0;
        }
      }
      return result0;
    }

    function parse_drawtoCommand() {
      var result0;

      result0 = parse_closepath();
      if ( result0 === null ) {
        result0 = parse_lineto();
        if ( result0 === null ) {
          result0 = parse_horizontalLineto();
          if ( result0 === null ) {
            result0 = parse_verticalLineto();
            if ( result0 === null ) {
              result0 = parse_curveto();
              if ( result0 === null ) {
                result0 = parse_smoothCurveto();
                if ( result0 === null ) {
                  result0 = parse_quadraticBezierCurveto();
                  if ( result0 === null ) {
                    result0 = parse_smoothQuadraticBezierCurveto();
                    if ( result0 === null ) {
                      result0 = parse_ellipticalArc();
                    }
                  }
                }
              }
            }
          }
        }
      }
      return result0;
    }

    function parse_moveto() {
      var result0, result1, result2;
      var pos0, pos1;

      pos0 = pos;
      pos1 = pos;
      if ( input.charCodeAt( pos ) === 77 ) {
        result0 = "M";
        pos++;
      }
      else {
        result0 = null;
        if ( reportFailures === 0 ) {
          matchFailed( "\"M\"" );
        }
      }
      if ( result0 !== null ) {
        result1 = [];
        result2 = parse_wsp();
        while ( result2 !== null ) {
          result1.push( result2 );
          result2 = parse_wsp();
        }
        if ( result1 !== null ) {
          result2 = parse_movetoArgumentSequence();
          if ( result2 !== null ) {
            result0 = [ result0, result1, result2 ];
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
      }
      else {
        result0 = null;
        pos = pos1;
      }
      if ( result0 !== null ) {
        result0 = ( function( offset, args ) { return createMoveTo( args, false ); } )( pos0, result0[ 2 ] );
      }
      if ( result0 === null ) {
        pos = pos0;
      }
      if ( result0 === null ) {
        pos0 = pos;
        pos1 = pos;
        if ( input.charCodeAt( pos ) === 109 ) {
          result0 = "m";
          pos++;
        }
        else {
          result0 = null;
          if ( reportFailures === 0 ) {
            matchFailed( "\"m\"" );
          }
        }
        if ( result0 !== null ) {
          result1 = [];
          result2 = parse_wsp();
          while ( result2 !== null ) {
            result1.push( result2 );
            result2 = parse_wsp();
          }
          if ( result1 !== null ) {
            result2 = parse_movetoArgumentSequence();
            if ( result2 !== null ) {
              result0 = [ result0, result1, result2 ];
            }
            else {
              result0 = null;
              pos = pos1;
            }
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
        if ( result0 !== null ) {
          result0 = ( function( offset, args ) { return createMoveTo( args, true ); } )( pos0, result0[ 2 ] );
        }
        if ( result0 === null ) {
          pos = pos0;
        }
      }
      return result0;
    }

    function parse_movetoArgumentSequence() {
      var result0, result1, result2;
      var pos0, pos1;

      pos0 = pos;
      pos1 = pos;
      result0 = parse_coordinatePair();
      if ( result0 !== null ) {
        result1 = parse_commaWsp();
        result1 = result1 !== null ? result1 : "";
        if ( result1 !== null ) {
          result2 = parse_linetoArgumentSequence();
          if ( result2 !== null ) {
            result0 = [ result0, result1, result2 ];
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
      }
      else {
        result0 = null;
        pos = pos1;
      }
      if ( result0 !== null ) {
        result0 = ( function( offset, pair, list ) { return [ pair ].concat( list ); } )( pos0, result0[ 0 ], result0[ 2 ] );
      }
      if ( result0 === null ) {
        pos = pos0;
      }
      if ( result0 === null ) {
        pos0 = pos;
        result0 = parse_coordinatePair();
        if ( result0 !== null ) {
          result0 = ( function( offset, pair ) { return [ pair ]; } )( pos0, result0 );
        }
        if ( result0 === null ) {
          pos = pos0;
        }
      }
      return result0;
    }

    function parse_closepath() {
      var result0;
      var pos0;

      pos0 = pos;
      if ( input.charCodeAt( pos ) === 90 ) {
        result0 = "Z";
        pos++;
      }
      else {
        result0 = null;
        if ( reportFailures === 0 ) {
          matchFailed( "\"Z\"" );
        }
      }
      if ( result0 === null ) {
        if ( input.charCodeAt( pos ) === 122 ) {
          result0 = "z";
          pos++;
        }
        else {
          result0 = null;
          if ( reportFailures === 0 ) {
            matchFailed( "\"z\"" );
          }
        }
      }
      if ( result0 !== null ) {
        result0 = ( function( offset, command ) { return { cmd: 'close' }; } )( pos0, result0 );
      }
      if ( result0 === null ) {
        pos = pos0;
      }
      return result0;
    }

    function parse_lineto() {
      var result0, result1, result2;
      var pos0, pos1;

      pos0 = pos;
      pos1 = pos;
      if ( input.charCodeAt( pos ) === 76 ) {
        result0 = "L";
        pos++;
      }
      else {
        result0 = null;
        if ( reportFailures === 0 ) {
          matchFailed( "\"L\"" );
        }
      }
      if ( result0 !== null ) {
        result1 = [];
        result2 = parse_wsp();
        while ( result2 !== null ) {
          result1.push( result2 );
          result2 = parse_wsp();
        }
        if ( result1 !== null ) {
          result2 = parse_linetoArgumentSequence();
          if ( result2 !== null ) {
            result0 = [ result0, result1, result2 ];
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
      }
      else {
        result0 = null;
        pos = pos1;
      }
      if ( result0 !== null ) {
        result0 = ( function( offset, args ) {
          return args.map( function( arg ) {
            return {
              cmd: 'lineTo',
              args: [ arg.x, arg.y ]
            };
          } );
        } )( pos0, result0[ 2 ] );
      }
      if ( result0 === null ) {
        pos = pos0;
      }
      if ( result0 === null ) {
        pos0 = pos;
        pos1 = pos;
        if ( input.charCodeAt( pos ) === 108 ) {
          result0 = "l";
          pos++;
        }
        else {
          result0 = null;
          if ( reportFailures === 0 ) {
            matchFailed( "\"l\"" );
          }
        }
        if ( result0 !== null ) {
          result1 = [];
          result2 = parse_wsp();
          while ( result2 !== null ) {
            result1.push( result2 );
            result2 = parse_wsp();
          }
          if ( result1 !== null ) {
            result2 = parse_linetoArgumentSequence();
            if ( result2 !== null ) {
              result0 = [ result0, result1, result2 ];
            }
            else {
              result0 = null;
              pos = pos1;
            }
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
        if ( result0 !== null ) {
          result0 = ( function( offset, args ) {
            return args.map( function( arg ) {
              return {
                cmd: 'lineToRelative',
                args: [ arg.x, arg.y ]
              };
            } );
          } )( pos0, result0[ 2 ] );
        }
        if ( result0 === null ) {
          pos = pos0;
        }
      }
      return result0;
    }

    function parse_linetoArgumentSequence() {
      var result0, result1, result2;
      var pos0, pos1;

      pos0 = pos;
      pos1 = pos;
      result0 = parse_coordinatePair();
      if ( result0 !== null ) {
        result1 = parse_commaWsp();
        result1 = result1 !== null ? result1 : "";
        if ( result1 !== null ) {
          result2 = parse_linetoArgumentSequence();
          if ( result2 !== null ) {
            result0 = [ result0, result1, result2 ];
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
      }
      else {
        result0 = null;
        pos = pos1;
      }
      if ( result0 !== null ) {
        result0 = ( function( offset, a, b ) { return [ a ].concat( b ); } )( pos0, result0[ 0 ], result0[ 2 ] );
      }
      if ( result0 === null ) {
        pos = pos0;
      }
      if ( result0 === null ) {
        pos0 = pos;
        result0 = parse_coordinatePair();
        if ( result0 !== null ) {
          result0 = ( function( offset, a ) { return [ a ]; } )( pos0, result0 );
        }
        if ( result0 === null ) {
          pos = pos0;
        }
      }
      return result0;
    }

    function parse_horizontalLineto() {
      var result0, result1, result2;
      var pos0, pos1;

      pos0 = pos;
      pos1 = pos;
      if ( input.charCodeAt( pos ) === 72 ) {
        result0 = "H";
        pos++;
      }
      else {
        result0 = null;
        if ( reportFailures === 0 ) {
          matchFailed( "\"H\"" );
        }
      }
      if ( result0 !== null ) {
        result1 = [];
        result2 = parse_wsp();
        while ( result2 !== null ) {
          result1.push( result2 );
          result2 = parse_wsp();
        }
        if ( result1 !== null ) {
          result2 = parse_horizontalLinetoArgumentSequence();
          if ( result2 !== null ) {
            result0 = [ result0, result1, result2 ];
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
      }
      else {
        result0 = null;
        pos = pos1;
      }
      if ( result0 !== null ) {
        result0 = ( function( offset, args ) {
          return args.map( function( arg ) {
            return {
              cmd: 'horizontalLineTo',
              args: [ arg ]
            }
          } );
        } )( pos0, result0[ 2 ] );
      }
      if ( result0 === null ) {
        pos = pos0;
      }
      if ( result0 === null ) {
        pos0 = pos;
        pos1 = pos;
        if ( input.charCodeAt( pos ) === 104 ) {
          result0 = "h";
          pos++;
        }
        else {
          result0 = null;
          if ( reportFailures === 0 ) {
            matchFailed( "\"h\"" );
          }
        }
        if ( result0 !== null ) {
          result1 = [];
          result2 = parse_wsp();
          while ( result2 !== null ) {
            result1.push( result2 );
            result2 = parse_wsp();
          }
          if ( result1 !== null ) {
            result2 = parse_horizontalLinetoArgumentSequence();
            if ( result2 !== null ) {
              result0 = [ result0, result1, result2 ];
            }
            else {
              result0 = null;
              pos = pos1;
            }
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
        if ( result0 !== null ) {
          result0 = ( function( offset, args ) {
            return args.map( function( arg ) {
              return {
                cmd: 'horizontalLineToRelative',
                args: [ arg ]
              }
            } );
          } )( pos0, result0[ 2 ] );
        }
        if ( result0 === null ) {
          pos = pos0;
        }
      }
      return result0;
    }

    function parse_horizontalLinetoArgumentSequence() {
      var result0, result1, result2;
      var pos0, pos1;

      pos0 = pos;
      pos1 = pos;
      result0 = parse_number();
      if ( result0 !== null ) {
        result1 = parse_commaWsp();
        result1 = result1 !== null ? result1 : "";
        if ( result1 !== null ) {
          result2 = parse_horizontalLinetoArgumentSequence();
          if ( result2 !== null ) {
            result0 = [ result0, result1, result2 ];
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
      }
      else {
        result0 = null;
        pos = pos1;
      }
      if ( result0 !== null ) {
        result0 = ( function( offset, a, b ) { return [ a ].concat( b ); } )( pos0, result0[ 0 ], result0[ 2 ] );
      }
      if ( result0 === null ) {
        pos = pos0;
      }
      if ( result0 === null ) {
        pos0 = pos;
        result0 = parse_number();
        if ( result0 !== null ) {
          result0 = ( function( offset, a ) { return [ a ]; } )( pos0, result0 );
        }
        if ( result0 === null ) {
          pos = pos0;
        }
      }
      return result0;
    }

    function parse_verticalLineto() {
      var result0, result1, result2;
      var pos0, pos1;

      pos0 = pos;
      pos1 = pos;
      if ( input.charCodeAt( pos ) === 86 ) {
        result0 = "V";
        pos++;
      }
      else {
        result0 = null;
        if ( reportFailures === 0 ) {
          matchFailed( "\"V\"" );
        }
      }
      if ( result0 !== null ) {
        result1 = [];
        result2 = parse_wsp();
        while ( result2 !== null ) {
          result1.push( result2 );
          result2 = parse_wsp();
        }
        if ( result1 !== null ) {
          result2 = parse_verticalLinetoArgumentSequence();
          if ( result2 !== null ) {
            result0 = [ result0, result1, result2 ];
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
      }
      else {
        result0 = null;
        pos = pos1;
      }
      if ( result0 !== null ) {
        result0 = ( function( offset, args ) {
          return args.map( function( arg ) {
            return {
              cmd: 'verticalLineTo',
              args: [ arg ]
            }
          } );
        } )( pos0, result0[ 2 ] );
      }
      if ( result0 === null ) {
        pos = pos0;
      }
      if ( result0 === null ) {
        pos0 = pos;
        pos1 = pos;
        if ( input.charCodeAt( pos ) === 118 ) {
          result0 = "v";
          pos++;
        }
        else {
          result0 = null;
          if ( reportFailures === 0 ) {
            matchFailed( "\"v\"" );
          }
        }
        if ( result0 !== null ) {
          result1 = [];
          result2 = parse_wsp();
          while ( result2 !== null ) {
            result1.push( result2 );
            result2 = parse_wsp();
          }
          if ( result1 !== null ) {
            result2 = parse_verticalLinetoArgumentSequence();
            if ( result2 !== null ) {
              result0 = [ result0, result1, result2 ];
            }
            else {
              result0 = null;
              pos = pos1;
            }
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
        if ( result0 !== null ) {
          result0 = ( function( offset, args ) {
            return args.map( function( arg ) {
              return {
                cmd: 'verticalLineToRelative',
                args: [ arg ]
              }
            } );
          } )( pos0, result0[ 2 ] );
        }
        if ( result0 === null ) {
          pos = pos0;
        }
      }
      return result0;
    }

    function parse_verticalLinetoArgumentSequence() {
      var result0, result1, result2;
      var pos0, pos1;

      pos0 = pos;
      pos1 = pos;
      result0 = parse_number();
      if ( result0 !== null ) {
        result1 = parse_commaWsp();
        result1 = result1 !== null ? result1 : "";
        if ( result1 !== null ) {
          result2 = parse_verticalLinetoArgumentSequence();
          if ( result2 !== null ) {
            result0 = [ result0, result1, result2 ];
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
      }
      else {
        result0 = null;
        pos = pos1;
      }
      if ( result0 !== null ) {
        result0 = ( function( offset, a, b ) { return [ a ].concat( b ); } )( pos0, result0[ 0 ], result0[ 2 ] );
      }
      if ( result0 === null ) {
        pos = pos0;
      }
      if ( result0 === null ) {
        pos0 = pos;
        result0 = parse_number();
        if ( result0 !== null ) {
          result0 = ( function( offset, a ) { return [ a ]; } )( pos0, result0 );
        }
        if ( result0 === null ) {
          pos = pos0;
        }
      }
      return result0;
    }

    function parse_curveto() {
      var result0, result1, result2;
      var pos0, pos1;

      pos0 = pos;
      pos1 = pos;
      if ( input.charCodeAt( pos ) === 67 ) {
        result0 = "C";
        pos++;
      }
      else {
        result0 = null;
        if ( reportFailures === 0 ) {
          matchFailed( "\"C\"" );
        }
      }
      if ( result0 !== null ) {
        result1 = [];
        result2 = parse_wsp();
        while ( result2 !== null ) {
          result1.push( result2 );
          result2 = parse_wsp();
        }
        if ( result1 !== null ) {
          result2 = parse_curvetoArgumentSequence();
          if ( result2 !== null ) {
            result0 = [ result0, result1, result2 ];
          }
          else {
            result0 = null;
            pos = pos1;
          }
        }
        else {
          result0 = null;
          pos = pos1;
        }
      }
      else {
        result0 = null;
